; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/examples/extr_rstream.c_set_options.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/examples/extr_rstream.c_set_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buffer_size = common dso_local global i64 0, align 8
@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_SNDBUF = common dso_local global i32 0, align 4
@SO_RCVBUF = common dso_local global i32 0, align 4
@IPPROTO_TCP = common dso_local global i32 0, align 4
@TCP_NODELAY = common dso_local global i32 0, align 4
@flags = common dso_local global i32 0, align 4
@MSG_DONTWAIT = common dso_local global i32 0, align 4
@F_SETFL = common dso_local global i32 0, align 4
@O_NONBLOCK = common dso_local global i32 0, align 4
@use_rs = common dso_local global i64 0, align 8
@optimization = common dso_local global i64 0, align 8
@opt_latency = common dso_local global i64 0, align 8
@SOL_RDMA = common dso_local global i32 0, align 4
@RDMA_INLINE = common dso_local global i32 0, align 4
@inline_size = common dso_local global i32 0, align 4
@opt_bandwidth = common dso_local global i64 0, align 8
@keepalive = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @set_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_options(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i64, i64* @buffer_size, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %15

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @SOL_SOCKET, align 4
  %9 = load i32, i32* @SO_SNDBUF, align 4
  %10 = call i32 @rs_setsockopt(i32 %7, i32 %8, i32 %9, i32* bitcast (i64* @buffer_size to i32*), i32 8)
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @SOL_SOCKET, align 4
  %13 = load i32, i32* @SO_RCVBUF, align 4
  %14 = call i32 @rs_setsockopt(i32 %11, i32 %12, i32 %13, i32* bitcast (i64* @buffer_size to i32*), i32 8)
  br label %28

15:                                               ; preds = %1
  store i32 524288, i32* %3, align 4
  %16 = load i32, i32* %2, align 4
  %17 = load i32, i32* @SOL_SOCKET, align 4
  %18 = load i32, i32* @SO_SNDBUF, align 4
  %19 = bitcast i32* %3 to i8*
  %20 = bitcast i8* %19 to i32*
  %21 = call i32 @rs_setsockopt(i32 %16, i32 %17, i32 %18, i32* %20, i32 4)
  %22 = load i32, i32* %2, align 4
  %23 = load i32, i32* @SOL_SOCKET, align 4
  %24 = load i32, i32* @SO_RCVBUF, align 4
  %25 = bitcast i32* %3 to i8*
  %26 = bitcast i8* %25 to i32*
  %27 = call i32 @rs_setsockopt(i32 %22, i32 %23, i32 %24, i32* %26, i32 4)
  br label %28

28:                                               ; preds = %15, %6
  store i32 1, i32* %3, align 4
  %29 = load i32, i32* %2, align 4
  %30 = load i32, i32* @IPPROTO_TCP, align 4
  %31 = load i32, i32* @TCP_NODELAY, align 4
  %32 = bitcast i32* %3 to i8*
  %33 = bitcast i8* %32 to i32*
  %34 = call i32 @rs_setsockopt(i32 %29, i32 %30, i32 %31, i32* %33, i32 4)
  %35 = load i32, i32* @flags, align 4
  %36 = load i32, i32* @MSG_DONTWAIT, align 4
  %37 = and i32 %35, %36
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %44

39:                                               ; preds = %28
  %40 = load i32, i32* %2, align 4
  %41 = load i32, i32* @F_SETFL, align 4
  %42 = load i32, i32* @O_NONBLOCK, align 4
  %43 = call i32 @rs_fcntl(i32 %40, i32 %41, i32 %42)
  br label %44

44:                                               ; preds = %39, %28
  %45 = load i64, i64* @use_rs, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %67

47:                                               ; preds = %44
  %48 = load i64, i64* @optimization, align 8
  %49 = load i64, i64* @opt_latency, align 8
  %50 = icmp eq i64 %48, %49
  br i1 %50, label %51, label %56

51:                                               ; preds = %47
  %52 = load i32, i32* %2, align 4
  %53 = load i32, i32* @SOL_RDMA, align 4
  %54 = load i32, i32* @RDMA_INLINE, align 4
  %55 = call i32 @rs_setsockopt(i32 %52, i32 %53, i32 %54, i32* @inline_size, i32 4)
  br label %66

56:                                               ; preds = %47
  %57 = load i64, i64* @optimization, align 8
  %58 = load i64, i64* @opt_bandwidth, align 8
  %59 = icmp eq i64 %57, %58
  br i1 %59, label %60, label %65

60:                                               ; preds = %56
  store i32 0, i32* %3, align 4
  %61 = load i32, i32* %2, align 4
  %62 = load i32, i32* @SOL_RDMA, align 4
  %63 = load i32, i32* @RDMA_INLINE, align 4
  %64 = call i32 @rs_setsockopt(i32 %61, i32 %62, i32 %63, i32* %3, i32 4)
  br label %65

65:                                               ; preds = %60, %56
  br label %66

66:                                               ; preds = %65, %51
  br label %67

67:                                               ; preds = %66, %44
  %68 = load i64, i64* @keepalive, align 8
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %73

70:                                               ; preds = %67
  %71 = load i32, i32* %2, align 4
  %72 = call i32 @set_keepalive(i32 %71)
  br label %73

73:                                               ; preds = %70, %67
  ret void
}

declare dso_local i32 @rs_setsockopt(i32, i32, i32, i32*, i32) #1

declare dso_local i32 @rs_fcntl(i32, i32, i32) #1

declare dso_local i32 @set_keepalive(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
